--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-build": "react-scripts build",
+    "clean": "rm -rf dist node_modules",
+    "deploy": "yarn clean && yarn && yarn build && now",
+    "deploy-pro": "yarn clean && yarn && yarn build && now --target production"
   },
   "eslintConfig": {
     "extends": "react-app"
