--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +19,8 @@
     "now-build": "react-scripts build",
     "clean": "rm -rf dist node_modules",
     "deploy": "yarn clean && yarn && yarn build && now",
-    "deploy-pro": "yarn clean && yarn && yarn build && now --target production"
+    "deploy-pro": "yarn clean && yarn && yarn build && now --target production",
+    "now-dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
