--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
 "version": 2,
-"name": "gsienergy",
+"name": "omnienergy",
 "alias": ["omnienergy.io", "www.omnienergy.io"],
 "scope": "gsienergy",
 
